working model name streaming
