# chat-server/src/chat_server/generated/main.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2025-03-20T13:26:02+00:00
+#   timestamp: 2025-03-21T18:00:49+00:00
 
 from __future__ import annotations
 
@@ -11,20 +11,20 @@ from fastapi import FastAPI
 from .models import ChatMessage, Error, SubmitChatMessageRequest, Thread
 
 app = FastAPI(
-    title="Simple Chat API",
-    description="API for a chat application with a single endpoint",
-    version="1.0.0",
+    title='Simple Chat API',
+    description='API for a chat application with a single endpoint',
+    version='1.0.0',
     servers=[
         {
-            "url": "https://chat.chrissreesangkom.com/api",
-            "description": "Production server",
+            'url': 'https://chat.chrissreesangkom.com/api',
+            'description': 'Production server',
         },
-        {"url": "http://localhost:8000", "description": "Development server"},
+        {'url': 'http://localhost:8000', 'description': 'Development server'},
     ],
 )
 
 
-@app.post("/thread", response_model=Thread, tags=["Chat"])
+@app.post('/thread', response_model=Thread, tags=['Chat'])
 def create_thread() -> Thread:
     """
     Create a new thread
@@ -32,7 +32,7 @@ def create_thread() -> Thread:
     pass
 
 
-@app.get("/thread", response_model=List[Thread], tags=["Chat"])
+@app.get('/thread', response_model=List[Thread], tags=['Chat'])
 def get_threads() -> List[Thread]:
     """
     Get all threads
@@ -40,7 +40,7 @@ def get_threads() -> List[Thread]:
     pass
 
 
-@app.get("/thread/{thread_id}/chat", response_model=List[ChatMessage], tags=["Chat"])
+@app.get('/thread/{thread_id}/chat', response_model=List[ChatMessage], tags=['Chat'])
 def get_chat_messages(thread_id: str) -> List[ChatMessage]:
     """
     Get all chat messages
@@ -49,12 +49,14 @@ def get_chat_messages(thread_id: str) -> List[ChatMessage]:
 
 
 @app.post(
-    "/thread/{thread_id}/chat",
+    '/thread/{thread_id}/chat',
     response_model=ChatMessage,
-    responses={"400": {"model": Error}},
-    tags=["Chat"],
+    responses={'400': {'model': Error}},
+    tags=['Chat'],
 )
-def submit_chat_message(thread_id: str, body: SubmitChatMessageRequest = ...) -> Union[ChatMessage, Error]:
+def submit_chat_message(
+    thread_id: str, body: SubmitChatMessageRequest = ...
+) -> Union[ChatMessage, Error]:
     """
     Submit a chat message and get a response
     """
